# RM_vision_project

./: .gitignore  CMakeLists.txt  README.md  main.cpp  rm_vision.service  run_vision.sh
include/: detector.hpp  predictor.hpp  settings.hpp  solver.hpp  types.hpp
src/: detector.cpp  predictor.cpp  solver.cpp
